style cleanup and fix footer text wrapping

--- a/css/main.styl
+++ b/css/main.styl
@@ -46,23 +46,17 @@ input, button
 
 .form-control
   display: block;
-  width: 100%;
   height: 34px;
   padding: 6px 12px;
   font-size: .8em;
   color: secondary-gray;
   background-color: #fff;
-  background-image: none;
   border: 1px solid primary-gray;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  border-radius: 2px;
+
 
 input[name=torrentId]
-  width: 400px
+  width: 50%
   display: inline-block
 
 #download-toggle
@@ -110,7 +104,6 @@ iframe
 .btn
   display: inline-block
   padding: .7em
-  margin-bottom: 0
   font-size: .8em
   font-weight: bold
   text-align: center
@@ -119,11 +112,6 @@ iframe
   -ms-touch-action: manipulation
   touch-action: manipulation
   cursor: pointer
-  -webkit-user-select: none
-  -moz-user-select: none
-  -ms-user-select: none
-  user-select: none
-  background-image: none
   border: 1px solid transparent
   border-radius: 5px
   letter-spacing: .1em
@@ -195,6 +183,9 @@ iframe
 
 .u-margin-top--md
   margin-top: 2em
+
+.u-margin-top--lg
+  margin-top: 4em
 
 .u-margin-right--sm
   margin-right: .5em
